# typed-ski

./: .bazelignore  .bazelrc  .c8rc.json  .editorconfig  .eslintrc.json  .gitattributes  .gitignore  .mbake.toml  .mocharc.json  .npmrc  .nvmrc  .prettierignore  AUTHORS  BUILD.bazel  CODE_OF_CONDUCT.md  LICENSE  MODULE.bazel  Makefile  README.md  SECURITY.md  asconfig.json  build-wasm.sh  bunfig.toml  deno.jsonc  design_proposals.md  eslint.config.js  eslint.config.mjs  flake.nix  hello_debug.ll  improve.diff  package-lock.json  package.json  pnpm-lock.yaml  release.config.cjs  tsconfig.emit.json  tsconfig.json
.github/: FUNDING.yml
.github/workflows/: codeql.yml  deno.yml  node.js.yml  node.yml  osv-scanner.yml  publish-package.yml  publish.yml
assembly/: arena-evaluator.ts  asconfig.json  index.ts
bazel/: BUILD.bazel  codegen.bzl  common.bzl  deno_dist.bzl  deno_sharded_test.bzl  node_dist.bzl  node_llvm_as_test.bzl  node_sharded_test.bzl  prettier.bzl  trip_llvm.bzl  ts_compile.bzl  wasm_release.bzl  workspace_command.bzl
bazel/windows/: kernel32.def  trip_nocrt_runtime.ll
bootstrap/src/: anf.trip  anfLlvm.trip  bridge.trip  bundleInventory.trip  bundleParseSummary.trip  bundleSummary.trip  core.trip  coreToLower.trip  coreToMini.trip  dataEnv.trip  index.trip  lexer.trip  llvm.trip  lowering.trip  miniCore.trip  miniVerify.trip  moduleEnv.trip  parser.trip  telemetry.trip  unparse.trip
c/: arena.c  arena.h  dag_codec_test.c  main.c  performance_test.c  ski_io.c  ski_io.h  thanatos.c  thanatos.h
compiler/: main.ts
consumers/thanatos/: BUILD.bazel
consumers/thanatos/platform/: BUILD.bazel  arena.c  arena.h  host_platform_windows.c  util.c
consumers/thanatos/runtime/: BUILD.bazel  dag_codec_test.c  performance_test.c  session_test.c  ski_io.h  thanatos.h
consumers/thanatos/snapshots/readOneMmapS/: input.ski
consumers/thanatos/snapshots/writeOneABC/: input.ski
core/: BUILD.bazel  arena.c  arena.h  arena_layout.def  dag_codec_test.c  host_platform.h  host_platform_posix.c  host_platform_windows.c  main.c  performance_test.c  session.c  session.h  session_test.c  ski_io.c  ski_io.h  ski_io_test.c  thanatos.c  thanatos.h  trip_runtime.c  trip_runtime.h  util.c  util.h  util_test.c
lib/: appendable.ts  avl.trip  avl.ts  bin.trip  bin.ts  church.ts  combinators.ts  cons.ts  constants.ts  converter.ts  evaluator.mts  evaluator.ts  expression.mts  expression.ts  index.mts  index.ts  lambda.ts  nat.trip  nat.ts  nonterminal.ts  packer.mts  packer.ts  parser.mts  parser.ts  prelude.trip  prelude.ts  recursiveDescentBuffer.ts  syntaxExpression.mts  syntaxExpression.ts  terminal.mts  tripModules.ts  tripSourceLoader.ts  typedLambda.ts  types.ts
lib/codegen/: arenaHeader.ts  index.ts
lib/compiler/: anf.trip  bootstrapModules.ts  bridge.trip  bundleInventory.trip  bundleParseSummary.trip  bundleSummary.trip  bundleV1.ts  combinatorCompiler.ts  core.trip  coreToLower.trip  coreToMini.trip  dataEnv.trip  index.trip  index.ts  lexer.trip  llvm.trip  llvmCompiler.ts  lowering.trip  miniCore.trip  moduleEnv.trip  objectFile.ts  parser.trip  singleFileCompiler.ts  telemetry.trip  unparse.trip
lib/consts/: combinators.ts  lambdas.ts  nat.ts  natNames.ts
lib/conversion/: conversionError.ts  converter.ts
lib/data/: skiTrie.ts  skiTrieNode.ts
lib/evaluator/: BUILD.bazel  arenaEvaluator.ts  arenaViews.ts  arenaWasmLoader.ts  arenaWorker.ts  async.ts  evaluator.ts  parallelArenaEvaluator.ts  skiEvaluator.ts  thanatosEvaluator.ts
lib/evaluator/io/: arenaRing.ts  ioManager.ts  ioRingsValidator.ts  ringStats.ts
lib/evaluator/parallel/: completionPoller.ts  requestTracker.ts  workerManager.ts
lib/improvize/: index.ts  lexer.ts  reachability.ts  statistical.ts
lib/lambda/: lambda.ts
lib/linker/: duplicateDetection.ts  graph.ts  moduleLinker.ts
lib/meta/: frontend.ts  trip.ts
lib/minicore/: README.md  anfAst.ts  anfToMiniCore.ts  ast.ts  blockAst.ts  evaluator.ts  fromAnf.ts  fromTrip.ts  index.ts  metadata.ts  nativeV1Subset.ts  runtimeSymbols.ts  toAnf.ts  typeOf.ts  unparseAnf.ts  unparseBlock.ts  validateAnf.ts  validateBlock.ts  validator.ts
lib/parser/: appendable.ts  chain.ts  consts.ts  definition.ts  eof.ts  parseError.ts  parserState.ts  recursiveDescentBuffer.ts  rustStruct.ts  ski.ts  systemFTerm.ts  systemFType.ts  (+5 more)
lib/shared/: BUILD.bazel  arena.ts  canonical.ts  clangPath.ts  forestTypes.ts  platform.ts  types.ts  version.ts  workspaceRoot.ts
runtime/: BUILD.bazel
runtime/thanatos/: BUILD.bazel  arena_test.c  ski_io.c  ski_io_test.c
runtime/trip/: BUILD.bazel  trip_runtime.c  trip_runtime.h
rust/: .gitignore  README.md
scripts/: BUILD.bazel  bazel.ts  bazelBuildDist.ts  bazelShardTest.ts  bootstrap.ts  bootstrapNormalize.ts  build_dist.mjs  embed-wasm.ts  find-unused-exports.ts  findUnusedExports.ts  genForest.ts  genSvg.ts  generate-arena-header-c.ts  generate-arena-header.ts  generate-version.ts  generateArenaHeaderC.ts  generateForest.ts  generateVersion.ts  generate_layouts.mjs  generate_layouts_runner.sh  generate_version.mjs  generate_version_runner.sh  release_prepare.js  repoDeno.ts  repoNode.ts  test.ts  trip_to_llvm.ts  tsgo.mjs  types.ts  update_goldens.ts  validate-arena-header.ts  withRepoDeno.ts  withRepoNode.ts
scripts/templates/: vcxproj.xml.tpl
server/: deno.json  serve-workbench.ts  serveWorkbench.ts  webglForest.ts  workbench.css  workbench.html  workbench.js
test/: appendable.test.ts  avl.test.ts  avlBenchmark.ts  avlCases.ts  avlHarness.ts  avlMiniCore.test.ts  avlMiniCoreBenchmark.ts  avlMiniCoreHarness.ts  church.test.ts  converter.test.ts  debugIo.test.ts  debug_io.test.ts  evaluator.test.mts  evaluator.test.ts  expression.test.mts  expression.test.ts  globalSetup.ts  ioIntegration.test.ts  io_integration.test.ts  packer.test.mts  packer.test.ts  parser.test.mts  parser.test.ts  performance.test.mts  performance.test.ts  prelude.test.ts  test.trip  thanatosHarness.test.ts  thanatosHarness.ts  thanatosHarness.unit.test.ts  tripSourceLoader.test.ts  typedLambda.test.ts  types.test.ts
wasm/: BUILD.bazel
(+372 files in other folders)
