load("@rules_cc//cc:defs.bzl", "cc_binary")
load(
    "//bazel:trip_llvm.bzl",
    "trip_executable_stdout_test",
    "trip_llvm_object",
    "trip_windows_executable",
    "windows_import_library",
)

package(default_visibility = ["//visibility:public"])

exports_files([
    "package.json",
    "tsconfig.emit.json",
    "dist/tripc.node.js",
])

genrule(
    name = "copy_tripc",
    srcs = ["dist/tripc.node.js"],
    outs = ["tripc_copy.js"],
    cmd = "cp $< $@",
)

filegroup(
    name = "tripc_compiler",
    srcs = [":copy_tripc"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

LLVM_AS_BIN = select({
    ":linux_x86_64": "@typed_ski_llvm_linux_x64//:llvm_as",
    ":macos_arm64": "@typed_ski_llvm_macos_arm64//:llvm_as",
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_as",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_LLC_BIN = select({
    ":linux_x86_64": "@typed_ski_llvm_linux_x64//:llvm_llc",
    ":macos_arm64": "@typed_ski_llvm_macos_arm64//:llvm_llc",
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_llc",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_CLANG_BIN = select({
    ":linux_x86_64": "@typed_ski_llvm_linux_x64//:llvm_clang",
    ":macos_arm64": "@typed_ski_llvm_macos_arm64//:llvm_clang",
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_clang",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_LLD_LINK_BIN = select({
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_lld_link",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_DLLTOOL_BIN = select({
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_dlltool",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_DIST_DATA = select({
    ":linux_x86_64": ["@typed_ski_llvm_linux_x64//:dist"],
    ":macos_arm64": ["@typed_ski_llvm_macos_arm64//:dist"],
    ":windows_x86_64": ["@typed_ski_llvm_windows_x64//:dist"],
    "//conditions:default": [],
})

WINDOWS_X86_64_COMPATIBILITY = select({
    ":windows_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

LINUX_X86_64_COMPATIBILITY = select({
    ":linux_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

MACOS_ARM64_COMPATIBILITY = select({
    ":macos_arm64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

HELLO_WORLD_COMPATIBILITY = select({
    ":linux_x86_64": [],
    ":macos_arm64": [],
    ":windows_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

test_suite(
    name = "native_tests",
    tests = [
        "//:trip_hello_world_test",
    ],
)

trip_llvm_object(
    name = "trip_hello_world_linux_obj",
    src = "test/compiler/llvm/helloWorld.trip",
    compiler = ":tripc_compiler",
    entry_module = "Main",
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    module_source_files = ["lib/prelude.trip"],
    module_source_names = ["Prelude"],
    object_extension = ".o",
    tags = ["manual"],
    target_compatible_with = LINUX_X86_64_COMPATIBILITY,
    target_triple = "x86_64-unknown-linux-gnu",
)

trip_llvm_object(
    name = "trip_hello_world_macos_obj",
    src = "test/compiler/llvm/helloWorld.trip",
    compiler = ":tripc_compiler",
    entry_module = "Main",
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    module_source_files = ["lib/prelude.trip"],
    module_source_names = ["Prelude"],
    object_extension = ".o",
    tags = ["manual"],
    target_compatible_with = MACOS_ARM64_COMPATIBILITY,
    target_triple = "arm64-apple-darwin",
)

trip_llvm_object(
    name = "trip_hello_world_windows_obj",
    src = "test/compiler/llvm/helloWorld.trip",
    compiler = ":tripc_compiler",
    entry_module = "Main",
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    module_source_files = ["lib/prelude.trip"],
    module_source_names = ["Prelude"],
    tags = ["manual"],
    target_compatible_with = WINDOWS_X86_64_COMPATIBILITY,
    target_triple = "x86_64-pc-windows-msvc",
)

cc_binary(
    name = "trip_hello_world_linux",
    srcs = [":trip_hello_world_linux_obj"],
    tags = ["manual"],
    target_compatible_with = LINUX_X86_64_COMPATIBILITY,
    deps = ["//runtime/trip:trip_runtime_io"],
)

cc_binary(
    name = "trip_hello_world_macos",
    srcs = [":trip_hello_world_macos_obj"],
    tags = ["manual"],
    target_compatible_with = MACOS_ARM64_COMPATIBILITY,
    deps = ["//runtime/trip:trip_runtime_io"],
)

windows_import_library(
    name = "kernel32_import_lib",
    def_file = "//bazel:windows/kernel32.def",
    llvm_dlltool = LLVM_DLLTOOL_BIN,
    tags = ["manual"],
    target_compatible_with = WINDOWS_X86_64_COMPATIBILITY,
)

trip_windows_executable(
    name = "trip_hello_world_windows",
    import_libs = [":kernel32_import_lib"],
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    llvm_lld_link = LLVM_LLD_LINK_BIN,
    object = ":trip_hello_world_windows_obj",
    runtime_llvm = "//bazel:windows/trip_nocrt_runtime.ll",
    tags = ["manual"],
    target_compatible_with = WINDOWS_X86_64_COMPATIBILITY,
)

alias(
    name = "trip_hello_world",
    actual = select({
        ":linux_x86_64": ":trip_hello_world_linux",
        ":macos_arm64": ":trip_hello_world_macos",
        ":windows_x86_64": ":trip_hello_world_windows",
    }),
    target_compatible_with = HELLO_WORLD_COMPATIBILITY,
)

trip_executable_stdout_test(
    name = "trip_hello_world_test",
    binary = ":trip_hello_world",
    expected_exit_code = 10,
    expected_stdout = "Hello, world!\n",
    target_compatible_with = HELLO_WORLD_COMPATIBILITY,
)
