load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@rules_cc//cc:defs.bzl", "cc_binary")
load("//bazel:codegen.bzl", "codegen_rule")
load("//bazel:node_dist.bzl", "node_dist")
load("//bazel:node_llvm_as_test.bzl", "node_llvm_as_test")
load("//bazel:node_sharded_test.bzl", "node_sharded_test")
load("//bazel:prettier.bzl", "prettier_check")
load("//bazel:ts_compile.bzl", "ts_compile")
load(
    "//bazel:trip_llvm.bzl",
    "trip_executable_stdout_test",
    "trip_llvm_object",
    "trip_windows_executable",
    "windows_import_library",
)
load("//bazel:workspace_command.bzl", "workspace_command")

package(default_visibility = ["//visibility:public"])

exports_files([
    "package.json",
    "tsconfig.emit.json",
])

js_library(
    name = "package_json",
    srcs = ["package.json"],
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
)

config_setting(
    name = "windows_x86_64",
    constraint_values = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
)

codegen_rule(
    name = "jsr_generated_src",
    outs = ["jsr.json"],
    args = [
        "--package-json",
        "$(location :package.json)",
        "--jsr-json",
        "$(location jsr.json)",
    ],
    data = [":package.json"],
    script = "//scripts:generate_version.mjs",
)

npm_link_all_packages(
    name = "node_modules",
)

ts_compile(
    name = "ts_out",
    node_modules = [":node_modules"],
    srcs = glob(
        [
            "bin/**",
            "compiler/**",
            "lib/**",
            "scripts/**",
            "test/**",
            "tsconfig.json",
            "package.json",
        ],
        allow_empty = True,
        exclude = [
            "scripts/findUnusedExports.ts",
            "**/*.js",
            "**/*.js.map",
        ],
    ) + [
        # lib/shared, lib/evaluator, and scripts each have their own BUILD.bazel,
        # so glob(["lib/**"]) and glob(["scripts/**"]) above cannot cross those
        # package boundaries. Reference their filegroups explicitly instead.
        "//lib/shared:shared",
        "//lib/shared:version_generated_src",
        "//lib/evaluator:evaluator",
        "//scripts:scripts",
    ],
    tsconfig = "//:tsconfig.emit.json",
)

NODE_DATA_BASE = glob(
    [
        "package.json",
        "tsconfig.json",
        "*.jsonc",
        "*.md",
        "bin/**",
        "compiler/**",
        "lib/**",
    ],
    allow_empty = True,
    exclude = [
        "coverage/**",
        "dist/**",
    ],
) + [
    "//scripts",
    "//lib/shared",
    "//lib/evaluator",
    "//runtime",
    ":node_modules/pnpm",
    "//lib/shared:version_generated",
    ":jsr.json",
    ":ts_out",
]

NODE_TEST_DATA = NODE_DATA_BASE + glob(
    [
        "test/**",
    ],
    allow_empty = True,
    exclude = [
        "coverage/**",
        "dist/**",
    ],
)

NODE_DIST_DATA = NODE_DATA_BASE

LLVM_AS_BIN = select({
    ":linux_x86_64": "@typed_ski_llvm_linux_x64//:llvm_as",
    ":macos_arm64": "@typed_ski_llvm_macos_arm64//:llvm_as",
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_as",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_LLC_BIN = select({
    ":linux_x86_64": "@typed_ski_llvm_linux_x64//:llvm_llc",
    ":macos_arm64": "@typed_ski_llvm_macos_arm64//:llvm_llc",
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_llc",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_CLANG_BIN = select({
    ":linux_x86_64": "@typed_ski_llvm_linux_x64//:llvm_clang",
    ":macos_arm64": "@typed_ski_llvm_macos_arm64//:llvm_clang",
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_clang",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_LLD_LINK_BIN = select({
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_lld_link",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_DLLTOOL_BIN = select({
    ":windows_x86_64": "@typed_ski_llvm_windows_x64//:llvm_dlltool",
    "//conditions:default": "//bazel:empty.txt",
})

LLVM_DIST_DATA = select({
    ":linux_x86_64": ["@typed_ski_llvm_linux_x64//:dist"],
    ":macos_arm64": ["@typed_ski_llvm_macos_arm64//:dist"],
    ":windows_x86_64": ["@typed_ski_llvm_windows_x64//:dist"],
    "//conditions:default": [],
})

WINDOWS_X86_64_COMPATIBILITY = select({
    ":windows_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

LINUX_X86_64_COMPATIBILITY = select({
    ":linux_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

MACOS_ARM64_COMPATIBILITY = select({
    ":macos_arm64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

HELLO_WORLD_COMPATIBILITY = select({
    ":linux_x86_64": [],
    ":macos_arm64": [],
    ":windows_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

LLVM_AS_COMPATIBILITY = select({
    ":linux_x86_64": [],
    ":macos_arm64": [],
    ":windows_x86_64": [],
    "//conditions:default": ["@platforms//:incompatible"],
})

test_suite(
    name = "native_tests",
    tests = [
        "//:trip_hello_world_test",
    ],
)

node_dist(
    name = "dist_artifacts",
    data = NODE_DIST_DATA,
    ts_out = ":ts_out",
)

node_sharded_test(
    name = "node_tests",
    size = "large",
    timeout = "long",
    clang = LLVM_CLANG_BIN,
    data = NODE_TEST_DATA + [
        ":node_modules",
    ],
    dist = ":dist_artifacts",
    generated_jsr = ":jsr.json",
    llvm_dist = LLVM_DIST_DATA,
    shard_count = 8,
)

node_llvm_as_test(
    name = "llvm_as_smoke_test",
    data = NODE_TEST_DATA + LLVM_DIST_DATA + [
        ":node_modules",
    ],
    llvm_as = LLVM_AS_BIN,
    target_compatible_with = LLVM_AS_COMPATIBILITY,
)

trip_llvm_object(
    name = "trip_hello_world_linux_obj",
    src = "test/compiler/llvm/helloWorld.trip",
    data = NODE_TEST_DATA + LLVM_DIST_DATA + [
        ":node_modules",
    ],
    entry_module = "Main",
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    module_source_files = ["lib/prelude.trip"],
    module_source_names = ["Prelude"],
    object_extension = ".o",
    tags = ["manual"],
    target_compatible_with = LINUX_X86_64_COMPATIBILITY,
    target_triple = "x86_64-unknown-linux-gnu",
)

trip_llvm_object(
    name = "trip_hello_world_macos_obj",
    src = "test/compiler/llvm/helloWorld.trip",
    data = NODE_TEST_DATA + LLVM_DIST_DATA + [
        ":node_modules",
    ],
    entry_module = "Main",
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    module_source_files = ["lib/prelude.trip"],
    module_source_names = ["Prelude"],
    object_extension = ".o",
    tags = ["manual"],
    target_compatible_with = MACOS_ARM64_COMPATIBILITY,
    target_triple = "arm64-apple-darwin",
)

trip_llvm_object(
    name = "trip_hello_world_windows_obj",
    src = "test/compiler/llvm/helloWorld.trip",
    data = NODE_TEST_DATA + LLVM_DIST_DATA + [
        ":node_modules",
    ],
    entry_module = "Main",
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    module_source_files = ["lib/prelude.trip"],
    module_source_names = ["Prelude"],
    tags = ["manual"],
    target_compatible_with = WINDOWS_X86_64_COMPATIBILITY,
    target_triple = "x86_64-pc-windows-msvc",
)

cc_binary(
    name = "trip_hello_world_linux",
    srcs = [":trip_hello_world_linux_obj"],
    tags = ["manual"],
    target_compatible_with = LINUX_X86_64_COMPATIBILITY,
    deps = ["//runtime/trip:trip_runtime_io"],
)

cc_binary(
    name = "trip_hello_world_macos",
    srcs = [":trip_hello_world_macos_obj"],
    tags = ["manual"],
    target_compatible_with = MACOS_ARM64_COMPATIBILITY,
    deps = ["//runtime/trip:trip_runtime_io"],
)

windows_import_library(
    name = "kernel32_import_lib",
    def_file = "//bazel:windows/kernel32.def",
    llvm_dlltool = LLVM_DLLTOOL_BIN,
    tags = ["manual"],
    target_compatible_with = WINDOWS_X86_64_COMPATIBILITY,
)

trip_windows_executable(
    name = "trip_hello_world_windows",
    import_libs = [":kernel32_import_lib"],
    llvm_dist = LLVM_DIST_DATA,
    llvm_llc = LLVM_LLC_BIN,
    llvm_lld_link = LLVM_LLD_LINK_BIN,
    object = ":trip_hello_world_windows_obj",
    runtime_llvm = "//bazel:windows/trip_nocrt_runtime.ll",
    tags = ["manual"],
    target_compatible_with = WINDOWS_X86_64_COMPATIBILITY,
)

alias(
    name = "trip_hello_world",
    actual = select({
        ":linux_x86_64": ":trip_hello_world_linux",
        ":macos_arm64": ":trip_hello_world_macos",
        ":windows_x86_64": ":trip_hello_world_windows",
    }),
    target_compatible_with = HELLO_WORLD_COMPATIBILITY,
)

trip_executable_stdout_test(
    name = "trip_hello_world_test",
    binary = ":trip_hello_world",
    expected_exit_code = 10,
    expected_stdout = "Hello, world!\n",
    target_compatible_with = HELLO_WORLD_COMPATIBILITY,
)

workspace_command(
    name = "verify_version",
    subcommand = "verify-version",
)

workspace_command(
    name = "sync_generated",
    subcommand = "sync-generated",
)

workspace_command(
    name = "dist",
    subcommand = "dist",
)

workspace_command(
    name = "build",
    subcommand = "build",
)

prettier_check(
    name = "fmt_check",
    srcs = glob(
        [
            "*.json",
            "*.jsonc",
            "*.md",
            "bin/**",
            "compiler/**",
            "lib/**",
            "test/**",
            ".github/**",
        ],
        allow_empty = True,
        exclude = ["**/*.generated.*"],
    ) + [
        "//lib/evaluator:evaluator",
        "//lib/shared:shared",
        "//scripts:scripts",
    ],
    node_modules = [":node_modules/prettier"],
)

workspace_command(
    name = "lint",
    subcommand = "lint",
)

workspace_command(
    name = "test",
    subcommand = "test",
)

workspace_command(
    name = "typecheck",
    subcommand = "typecheck",
)
