module(
    name = "typed_ski",
)

bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "bazel_skylib", version = "1.9.0")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

LLVM_VERSION = "22.1.4"

LLVM_ARCHIVE_BUILD_FILE = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "dist",
    srcs = glob(["**"]),
)

filegroup(
    name = "llvm_as",
    srcs = ["bin/llvm-as{exe_suffix}"],
)

filegroup(
    name = "llvm_llc",
    srcs = ["bin/llc{exe_suffix}"],
)

filegroup(
    name = "llvm_clang",
    srcs = ["bin/clang{exe_suffix}"],
)

filegroup(
    name = "llvm_lld_link",
    srcs = ["bin/lld-link{exe_suffix}"],
)

filegroup(
    name = "llvm_dlltool",
    srcs = ["bin/llvm-dlltool{exe_suffix}"],
)

filegroup(
    name = "llvm_ml64",
    srcs = ["bin/llvm-ml64{exe_suffix}"],
)
"""

http_archive(
    name = "typed_ski_llvm_linux_x64",
    build_file_content = LLVM_ARCHIVE_BUILD_FILE.format(exe_suffix = ""),
    sha256 = "cdf232e3bc5d9909ddcf8cb7016802c6745a01e69a596747c684caa894a11567",
    strip_prefix = "LLVM-22.1.4-Linux-X64",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.4/LLVM-22.1.4-Linux-X64.tar.xz",
    ],
)

http_archive(
    name = "typed_ski_llvm_macos_arm64",
    build_file_content = LLVM_ARCHIVE_BUILD_FILE.format(exe_suffix = ""),
    sha256 = "45e0dfc0453624caed5e7b20e224ce8343af9c511c7f59803753a586620d6ad1",
    strip_prefix = "LLVM-22.1.4-macOS-ARM64",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.4/LLVM-22.1.4-macOS-ARM64.tar.xz",
    ],
)

http_archive(
    name = "typed_ski_llvm_windows_x64",
    build_file_content = LLVM_ARCHIVE_BUILD_FILE.format(exe_suffix = ".exe"),
    sha256 = "ed775bdaea7087c6c1aeac9498352cfcd8610d92dc4fe9eda9aecb15ce712a2c",
    strip_prefix = "clang+llvm-22.1.4-x86_64-pc-windows-msvc",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.4/clang%2Bllvm-22.1.4-x86_64-pc-windows-msvc.tar.xz",
    ],
)

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
toolchains.exec_platform(
    arch = "amd64",
    os = "linux",
)
toolchains.exec_platform(
    arch = "amd64",
    os = "windows",
)
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)
