module(
    name = "typed_ski",
)

bazel_dep(name = "hermetic_cc_toolchain", version = "4.1.0")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.18")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_nodejs", version = "6.7.4")
bazel_dep(name = "aspect_rules_js", version = "3.1.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

LLVM_VERSION = "22.1.4"

LLVM_ARCHIVE_BUILD_FILE = """
package(default_visibility = ["//visibility:public"])

filegroup(
    name = "dist",
    srcs = glob(["**"]),
)

filegroup(
    name = "llvm_as",
    srcs = ["bin/llvm-as{exe_suffix}"],
)

filegroup(
    name = "llvm_llc",
    srcs = ["bin/llc{exe_suffix}"],
)

filegroup(
    name = "llvm_clang",
    srcs = ["bin/clang{exe_suffix}"],
)

filegroup(
    name = "llvm_lld_link",
    srcs = ["bin/lld-link{exe_suffix}"],
)

filegroup(
    name = "llvm_dlltool",
    srcs = ["bin/llvm-dlltool{exe_suffix}"],
)

filegroup(
    name = "llvm_ml64",
    srcs = ["bin/llvm-ml64{exe_suffix}"],
)
"""

http_archive(
    name = "typed_ski_llvm_linux_x64",
    build_file_content = LLVM_ARCHIVE_BUILD_FILE.format(exe_suffix = ""),
    sha256 = "cdf232e3bc5d9909ddcf8cb7016802c6745a01e69a596747c684caa894a11567",
    strip_prefix = "LLVM-22.1.4-Linux-X64",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.4/LLVM-22.1.4-Linux-X64.tar.xz",
    ],
)

http_archive(
    name = "typed_ski_llvm_macos_arm64",
    build_file_content = LLVM_ARCHIVE_BUILD_FILE.format(exe_suffix = ""),
    sha256 = "45e0dfc0453624caed5e7b20e224ce8343af9c511c7f59803753a586620d6ad1",
    strip_prefix = "LLVM-22.1.4-macOS-ARM64",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.4/LLVM-22.1.4-macOS-ARM64.tar.xz",
    ],
)

http_archive(
    name = "typed_ski_llvm_windows_x64",
    build_file_content = LLVM_ARCHIVE_BUILD_FILE.format(exe_suffix = ".exe"),
    sha256 = "ed775bdaea7087c6c1aeac9498352cfcd8610d92dc4fe9eda9aecb15ce712a2c",
    strip_prefix = "clang+llvm-22.1.4-x86_64-pc-windows-msvc",
    urls = [
        "https://github.com/llvm/llvm-project/releases/download/llvmorg-22.1.4/clang%2Bllvm-22.1.4-x86_64-pc-windows-msvc.tar.xz",
    ],
)

NODE_26_VERSION = "26.1.0"

NODE_26_REPOSITORIES = {
    "26.1.0-darwin_arm64": [
        "node-v26.1.0-darwin-arm64.tar.xz",
        "node-v26.1.0-darwin-arm64",
        "c4b028b1ab7c01e4a526524d732522f71b0ea08e8859e29514d535ce2e17d443",
    ],
    "26.1.0-linux_amd64": [
        "node-v26.1.0-linux-x64.tar.xz",
        "node-v26.1.0-linux-x64",
        "9fc6f21b6c4a62439727123e510e9c39febb2f563738f4927cd3e0b288c9b3c9",
    ],
    "26.1.0-windows_amd64": [
        "node-v26.1.0-win-x64.zip",
        "node-v26.1.0-win-x64",
        "089a02c4c687451c9f0b7f1bfd252dae85a7ba27df0295a14096bdcc956fdc92",
    ],
}

node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    name = "typed_ski_node26",
    node_repositories = NODE_26_REPOSITORIES,
    node_version = NODE_26_VERSION,
)
node.toolchain(node_version = NODE_26_VERSION)
use_repo(
    node,
    "nodejs_darwin_arm64",
    "nodejs_linux_amd64",
    "nodejs_windows_amd64",
    "typed_ski_node26_darwin_arm64",
    "typed_ski_node26_linux_amd64",
    "typed_ski_node26_windows_amd64",
)

register_toolchains(
    "//bazel:node26_darwin_arm64_toolchain",
    "//bazel:node26_linux_amd64_toolchain",
    "//bazel:node26_windows_amd64_toolchain",
)

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm", dev_dependency = True)
npm.npm_translate_lock(
    name = "npm",
    lifecycle_hooks_exclude = ["esbuild"],
    pnpm_lock = "//:pnpm-lock.yaml",
    public_hoist_packages = {
        "*": [""],
    },
    verify_node_modules_ignored = "//:.bazelignore",
)
use_repo(npm, "npm")

pnpm = use_extension("@aspect_rules_js//npm:extensions.bzl", "pnpm", dev_dependency = True)
use_repo(pnpm, "pnpm")

toolchains = use_extension("@hermetic_cc_toolchain//toolchain:ext.bzl", "toolchains")
toolchains.exec_platform(
    arch = "amd64",
    os = "linux",
)
toolchains.exec_platform(
    arch = "amd64",
    os = "windows",
)
use_repo(toolchains, "zig_sdk")

register_toolchains(
    "@zig_sdk//toolchain/...",
    "@zig_sdk//libc_aware/toolchain/...",
)
