exports_files(["workspace_command.bzl"])

toolchain(
    name = "node25_darwin_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@typed_ski_node25_darwin_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node25_darwin_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    toolchain = "@typed_ski_node25_darwin_arm64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node25_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@typed_ski_node25_linux_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node25_linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    toolchain = "@typed_ski_node25_linux_arm64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node25_linux_ppc64le_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:ppc",
    ],
    toolchain = "@typed_ski_node25_linux_ppc64le//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node25_linux_s390x_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:s390x",
    ],
    toolchain = "@typed_ski_node25_linux_s390x//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node25_windows_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@typed_ski_node25_windows_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)
