exports_files(["workspace_command.bzl"])

toolchain(
    name = "node22_linux_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@nodejs_linux_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node22_windows_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:windows",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@nodejs_windows_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node22_darwin_amd64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:x86_64",
    ],
    toolchain = "@nodejs_darwin_amd64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node22_darwin_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:macos",
        "@platforms//cpu:arm64",
    ],
    toolchain = "@nodejs_darwin_arm64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)

toolchain(
    name = "node22_linux_arm64_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    toolchain = "@nodejs_linux_arm64//:toolchain",
    toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
)
