exports_files([
    "empty.txt",
    "windows/kernel32.def",
    "windows/trip_nocrt_runtime.ll",
    "node_llvm_as_test.bzl",
    "trip_llvm.bzl",
    "workspace_command.bzl",
])

# Define toolchains for different platforms
[
    toolchain(
        name = name,
        exec_compatible_with = [os_constraint, cpu_constraint],
        toolchain = toolchain_ref,
        toolchain_type = "@rules_nodejs//nodejs:toolchain_type",
    )
    for name, toolchain_ref, os_constraint, cpu_constraint in [
        ("node25_darwin_arm64_toolchain", "@typed_ski_node25_darwin_arm64//:toolchain", "@platforms//os:macos", "@platforms//cpu:arm64"),
        ("node25_linux_amd64_toolchain", "@typed_ski_node25_linux_amd64//:toolchain", "@platforms//os:linux", "@platforms//cpu:x86_64"),
        ("node25_windows_amd64_toolchain", "@typed_ski_node25_windows_amd64//:toolchain", "@platforms//os:windows", "@platforms//cpu:x86_64"),
    ]
]
